--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,4 +7,56 @@
           %li= link_to "Home",    root_path
           / b/c defined help_path in routes
           %li= link_to "Help",    help_path
-          %li= link_to "Log in", '#'
+          - if logged_in?
+            %li= link_to "Users", '#'
+            %li#fat-menu.dropdown
+              %a.dropdown-toggle{ href: '#', data: { toggle: "dropdown" } }
+                Account
+                %b.caret
+              %ul.dropdown-menu
+                %li= link_to "Profile", current_user
+                %li= link_to "Settings", '#'
+                %li.divider
+                %li= link_to "Log out", logout_path, method: "delete"
+          - else
+            %li= link_to "Log in", login_path
+
+          -#- if logged_in?
+          -#  %li= link_to "Users", '#'
+          -#  %li.dropdown
+          -#    %a.dropdown-toggle{ href:'#', data: { toggle: "dropdown" } }
+          -#      Account
+          -#      %b.caret
+          -#    %ul.dropdown-menu
+          -#      %li= link_to "Profile", current_user
+          -#      %li= link_to "Settings", "#"
+          -#      %li.divider
+          -#        %li= link_to "Log out", logout_path, method: "delete"
+          -#- else
+          -#  %li= link_to "Log in", login_path
+
+
+
+-#            <li><%= link_to "Users", '#' %></li>
+-#          <li class="dropdown">
+-#            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+-#              Account <b class="caret"></b>
+-#            </a>
+-#            <ul class="dropdown-menu">
+-#              <li><%= link_to "Profile", current_user %></li>
+-#              <li><%= link_to "Settings", '#' %></li>
+-#              <li class="divider"></li>
+-#              <li>
+-#                <%= link_to "Log out", logout_path, method: "delete" %>
+-#              </li>
+-#            </ul>
+-#          </li>
+-#        <% else %>
+-#          <li><%= link_to "Log in", login_path %></li>
+-#        <% end %>
+-#      </ul>
+-#    </nav>
+-#  </div>
+-#</header>
+-#          - else
+-#            %li=
