--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,14 +8,14 @@
           / b/c defined help_path in routes
           %li= link_to "Help",    help_path
           - if logged_in?
-            %li= link_to "Users", '#'
+            %li= link_to "Users", users_path
             %li#fat-menu.dropdown
               %a.dropdown-toggle{ href: '#', data: { toggle: "dropdown" } }
                 Account
                 %b.caret
               %ul.dropdown-menu
                 %li= link_to "Profile", current_user
-                %li= link_to "Settings", '#'
+                %li= link_to "Settings", edit_user_path(current_user)
                 %li.divider
                 %li= link_to "Log out", logout_path, method: "delete"
           - else
