Working up to 11.3

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,14 +1,19 @@
 - provide(:title, @user.name)
-/ <h1>
-/ <haml_loud> gravatar_for(@user) </haml_loud>
-/ <haml_loud> @user.name </haml_loud>
-/ <h2>
-/ <haml_loud> @user.email </haml_loud>
-/ </h2>
-/ </h1>
 .row
   %aside.col-md-4
     %section.user_info
       %h1
         = gravatar_for @user
         = @user.name
+  .col-md-8
+    - if @user.microposts.any?
+      %h3
+        Microposts
+        (
+        = @user.microposts.count
+        )
+      %ol.microposts
+        = render @microposts
+      = will_paginate @microposts
+
+
