--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -3,10 +3,10 @@
 -#In addition, after an invalid submission Rails automatically wraps the fields with errors in divs with the CSS class field_with_errors.
 -#These labels then allow us to style the error messages with the SCSS shown in
 -#Listing 7.20, which makes use of Sass’s @extend function to include the functionality of the Bootstrap class has-error.
-- if @user.errors.any?
+- if object.errors.any?
   #error_explanation 
     .alert.alert-danger
-      The form contains #{pluralize(@user.errors.count, "error")}.
+      The form contains #{ pluralize object.errors.count, "error" }.
     %ul
-      - @user.errors.full_messages.each do |msg|
+      - object.errors.full_messages.each do |msg|
         %li= msg
